--- a/panlindromeChecker.html
+++ b/panlindromeChecker.html
@@ -44,7 +44,7 @@
           </button>
           
            </div>
-          <p id="output" class="font-mono my-6">
+          <p id="output" class="font-mono my-6 white">
             Palindrome Checker
           </p>
      </div> 
@@ -88,7 +88,7 @@
                 }else{
                   $(document).ready(function(){
                     $("button").click(function(){
-                      $("p").addClass("red");
+                      $("p").addClass("white");
                     });
                   });
                 }
